--- a/src/Components/Home/Banner/Banner.css
+++ b/src/Components/Home/Banner/Banner.css
@@ -4,7 +4,7 @@
 }
 
 .banner{
-    background-image: url("https://dk8nafk1kle6o.cloudfront.net/Images/Shared/Pages/Banner_travelGuide_1576175300.jpg");
+    
     filter: grayscale(40%);
     padding-bottom: 100px;
 
@@ -14,4 +14,11 @@
 font-size: 100px;
 font-family: 'Yuji Boku', serif;
 color: rgb(73, 26, 26);
+}
+
+@media only screen and (max-width: 2500px) {
+  .banner {
+      background-image: url("https://dk8nafk1kle6o.cloudfront.net/Images/Shared/Pages/Banner_travelGuide_1576175300.jpg");
+    
+  }
 }
